@@ -7,9 +7,12 @@ Adds \fIip\fR/\fIplen\fR route to vswitchd routing table. \fIoutput_bridge\fR
 needs to be OVS bridge name.  This command is useful if OVS cached
 routes does not look right.
 .
-.IP "\fBovs/route/show\fR"
-Print all routes in OVS routing table, This includes routes cached
-from system routing table and user configured routes.
+.IP "\fBovs/route/show [table=\fIID|all\fB]\fR"
+Print routes in OVS routing table. This includes routes cached
+from system routing table and user configured routes. By default, the contents
+of the main routing table is displayed, unless requested otherwise with
+\fItable\fR parameter. In this case the contents of a specific table ID or of
+all routing tables is printed.
 .
 .IP "\fBovs/route/del ip/plen [pkt_mark=mark]\fR"
 Delete ip/plen route from OVS routing table.
